[gd_scene load_steps=19 format=3 uid="uid://biqeosl7ijdk5"]

[ext_resource type="Script" path="res://scenes/game_object/executed_enemy/executed_enemy.gd" id="1_4imrq"]
[ext_resource type="PackedScene" uid="uid://d0517nee0uimk" path="res://scenes/components/health_component.tscn" id="2_o85qx"]
[ext_resource type="PackedScene" uid="uid://cv3f38dxuexue" path="res://scenes/components/velocity_component.tscn" id="6_l85o5"]
[ext_resource type="PackedScene" uid="uid://cvqlyaw8b4llq" path="res://scenes/components/hit_flash_component.tscn" id="7_en355"]
[ext_resource type="PackedScene" uid="uid://ctstaky14r3ur" path="res://scenes/game_object/enemy_bullet/enemy_bullet_knife.tscn" id="7_hcthk"]
[ext_resource type="Shader" path="res://scenes/components/hit_flash_component.gdshader" id="8_vl2ta"]
[ext_resource type="PackedScene" uid="uid://ek5cpdqdjubh" path="res://scenes/game_object/enemy_bullet/bullet_emitter_component.tscn" id="9_856fg"]
[ext_resource type="PackedScene" uid="uid://y5nwa5dnoce1" path="res://scenes/components/death_component.tscn" id="10_a48xs"]
[ext_resource type="PackedScene" uid="uid://ccr5s7rjx3lgp" path="res://scenes/components/hurtbox.tscn" id="11_1ig05"]
[ext_resource type="AudioStream" uid="uid://c6tli5qc3tl5" path="res://assets/audio/ghostpepper_explosion.mp3" id="12_hn0ty"]
[ext_resource type="Texture2D" uid="uid://d0f4frvvfsaej" path="res://scenes/game_object/executed_enemy/executed.png" id="12_xqxnn"]
[ext_resource type="PackedScene" uid="uid://om4k6y38eucx" path="res://scenes/components/enemy_sound_player_component.tscn" id="13_ggdmr"]

[sub_resource type="Animation" id="Animation_8tcxr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_84i1h"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, -1), Vector2(1, -1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w03hm"]
_data = {
"RESET": SubResource("Animation_8tcxr"),
"walk": SubResource("Animation_84i1h")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_33ppj"]
resource_local_to_scene = true
shader = ExtResource("8_vl2ta")
shader_parameter/lerp_percent = 0.0
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_k1je1"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gcnki"]
radius = 5.0

[node name="ExecutedEnemy" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(1.15, 1.15)
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_4imrq")
bestiary_entry_id = "executed"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
libraries = {
"": SubResource("AnimationLibrary_w03hm")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_o85qx")]
max_health = 100.0

[node name="VelocityComponent" parent="." instance=ExtResource("6_l85o5")]
max_speed = 30
acceleration = 15.0

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("7_en355")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_33ppj")

[node name="BulletEmitterComponent" parent="." instance=ExtResource("9_856fg")]
bullet_scene = ExtResource("7_hcthk")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("10_a48xs")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
particle_scale = 1.15

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("11_1ig05")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_k1je1")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("12_xqxnn")
offset = Vector2(0, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_gcnki")

[node name="EnemySoundPlayerComponent" parent="." instance=ExtResource("13_ggdmr")]

[node name="SuicideSoundPlayer" parent="." instance=ExtResource("13_ggdmr")]
stream = ExtResource("12_hn0ty")
volume_db = -12.0
pitch_scale = 0.7

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true
